--- a/CSW 2 (OUR CHEF)..html
+++ b/CSW 2 (OUR CHEF)..html
@@ -12,7 +12,7 @@ href="CSW 2 (OUR CHEF)..html">
 
 <body>
 	<nav>
-		<a href="index.html">Manu</a>
+		<a href="index.html">Menu</a>
 		<a href="CSW 2 (RESERVATION)...html">Reservation</a>
 		<a href="CSW 2 (CONTACT)..html">Contact Us</a>
 		<a href="CSW 2 (LOCATION)..html">Location</a>
