--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ p {
 <body>
 <h1>About Us</h1>
 	<nav>
-		<a href="index.html">Manu</a>
+		<a href="index.html">Menu</a>
 		<a href="CSW 2 (RESERVATION)...html">Reservation</a>
 		<a href="CSW 2 (CONTACT)..html">Contact Us</a>
 		<a href="CSW 2 (LOCATION)..html">Location</a>
