--- a/CSW 2 (LOCATION)..html
+++ b/CSW 2 (LOCATION)..html
@@ -11,7 +11,7 @@
 
 <body>
 	<nav>
-		<a href="index.html">Manu</a>
+		<a href="index.html">Menu</a>
 		<a href="CSW 2 (RESERVATION)...html">Reservation</a>
 		<a href="CSW 2 (CONTACT)..html">Contact Us</a>
 		<a href="CSW 2 (LOCATION)..html">Location</a>
