--- a/chef.html
+++ b/chef.html
@@ -13,12 +13,12 @@ href="CSW 2 (OUR CHEF)..html">
 <body>
 	<nav>
 		<a href="index.html">Menu</a>
-		<a href="CSW 2 (RESERVATION)...html">Reservation</a>
-		<a href="CSW 2 (CONTACT)..html">Contact Us</a>
-		<a href="CSW 2 (LOCATION)..html">Location</a>
-		<a href="CSW 2 (MENU)..html">Food Menu</a>
-		<a href="CSW 2 (OUR CHEF)..html">Our Chef</a>
-	</nav> 
+		<a href="res.html">Reservation</a>
+		<a href="contact.html">Contact Us</a>
+		<a href="location.html">Location</a>
+		<a href="menu.html">Food Menu</a>
+		<a href="chef.html">Our Chef</a>
+	</nav>  
 <img src="unnamed.jpg" alt="img" width="250" height="150" style="float: left">
 <p>My name is silvia I'm from london.since im 17 years old i really like cook so i decide to study cook in university Ultimo, after i graduate i have job on this restaurant, and don't worry about food in this restaurant because i made it with love.</p>
 <img src="images.jpg" alt="img" width="250" height="150" style="float: left">
