--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@ p {
 <h1>About Us</h1>
 	<nav>
 		<a href="index.html">Menu</a>
-		<a href="CSW 2 (RESERVATION)...html">Reservation</a>
-		<a href="CSW 2 (CONTACT)..html">Contact Us</a>
-		<a href="CSW 2 (LOCATION)..html">Location</a>
-		<a href="CSW 2 (MENU)..html">Food Menu</a>
-		<a href="CSW 2 (OUR CHEF)..html">Our Chef</a>
+		<a href="res.html">Reservation</a>
+		<a href="contact.html">Contact Us</a>
+		<a href="location.html">Location</a>
+		<a href="menu.html">Food Menu</a>
+		<a href="chef.html">Our Chef</a>
 	</nav> 
 	
 <img src="ilustrasi-telur-asin-istock_ratio-16x9.jpg" alt="img" width="300" height="250" style="float: left">
