--- a/location.html
+++ b/location.html
@@ -12,12 +12,12 @@
 <body>
 	<nav>
 		<a href="index.html">Menu</a>
-		<a href="CSW 2 (RESERVATION)...html">Reservation</a>
-		<a href="CSW 2 (CONTACT)..html">Contact Us</a>
-		<a href="CSW 2 (LOCATION)..html">Location</a>
-		<a href="CSW 2 (MENU)..html">Food Menu</a>
-		<a href="CSW 2 (OUR CHEF)..html">Our Chef</a>
-	</nav> 
+		<a href="res.html">Reservation</a>
+		<a href="contact.html">Contact Us</a>
+		<a href="location.html">Location</a>
+		<a href="menu.html">Food Menu</a>
+		<a href="chef.html">Our Chef</a>
+	</nav>  
 <img src="spisestedet-feed.jpg" alt="img" width="1000" height="200">
 <h4>
 Address : Kongens Nytorv 26, 1050 København, Denmark</h4>
