--- a/menu.html
+++ b/menu.html
@@ -13,12 +13,12 @@ href="../assigment 2 csw/CSW 2 (MENU).html">
 <body>
 	<nav>
 		<a href="index.html">Menu</a>
-		<a href="CSW 2 (RESERVATION)...html">Reservation</a>
-		<a href="CSW 2 (CONTACT)..html">Contact Us</a>
-		<a href="CSW 2 (LOCATION)..html">Location</a>
-		<a href="CSW 2 (MENU)..html">Food Menu</a>
-		<a href="CSW 2 (OUR CHEF)..html">Our Chef</a>
-	</nav> 
+		<a href="res.html">Reservation</a>
+		<a href="contact.html">Contact Us</a>
+		<a href="location.html">Location</a>
+		<a href="menu.html">Food Menu</a>
+		<a href="chef.html">Our Chef</a>
+	</nav>  
 <h2>FOOD</h2>
 	
 
