--- a/chef.html
+++ b/chef.html
@@ -1,11 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <style>
 	h1 {color: #000000;}
 </style>
-<link rel="stylesheet" type="text/css"
-href="CSW 2 (OUR CHEF)..html">
 <meta charset="utf-8">
 <title>Untitled Document</title>
 </head>
