--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,10 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <style>
 	h1 { color: #070707;}
 </style>
-<link rel="stylesheet" type="text/css"
-href="../assigment 2 csw/CSW 2 (CONTACT).html">
+
 <meta charset="utf-8">
 <title>Untitled Document</title>
 </head>
