--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <style> width="100" 
 h1 {
   background-color: orange;
 }
 
-div {
+body {
   background-color: darkorange;
 }
 
