--- a/location.html
+++ b/location.html
@@ -1,10 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <style>
 	</style>
-	<link rel="stylesheet" type="text/css"
-	href="../CSW 2/CSW 2 (LOCATION).html">
+
 <meta charset="utf-8">
 <title>Untitled Document</title>
 </head>
