--- a/menu.html
+++ b/menu.html
@@ -1,11 +1,10 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <style>
 	h1 { color: #0B0A0A;}
 </style>
-<link rel="stylesheet" type="text/css"
-href="../assigment 2 csw/CSW 2 (MENU).html">
+
 <meta charset="utf-8">
 <title>Menu</title>
 </head>
