--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
 h1 {
   background-color: orange;
 }
-
-body {
-  background-color: darkorange;
+	p{
+  		background-color: orangered;
 }
-
-p {
-  background-color: orangered;
-}
+	body{
+		background-color: darkorange}
 </style>
 <meta charset="utf-8">
 <title>LOW_BUDGET</title>
