--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@ h1 {
 	p{
   		background-color: orangered;
 }
-	body{
-		background-color: darkorange}
+
 </style>
 <meta charset="utf-8">
 <title>LOW_BUDGET</title>
 </head>
 
-<body>
+<body bgcolor="darkorange">
 <h1>About Us</h1>
 	<nav>
 		<a href="index.html">Menu</a>
