--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!doctype html>
 <html lang="en">
 <head>
-<style> width="100" 
-h1 {
-  background-color: orange;
-}
+<style>
+	body{
+		background-color: darkorange;
+		width: 100%
+	}
+	h1{
+		background-color: orange
+	}
 	p{
-  		background-color: orangered;
-}
-
+		background-color: orangered
+	}
 </style>
 <meta charset="utf-8">
 <title>LOW_BUDGET</title>
 </head>
 
-<body bgcolor="darkorange">
+<body>
 <h1>About Us</h1>
 	<nav>
 		<a href="index.html">Menu</a>
